--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,7 +11,10 @@
     "noImplicitThis": false,
     "noImplicitReturns": false,
     "noUncheckedIndexedAccess": true,
-
+    "noCheck": true,
+     "noEmitOnError": true,
+     "allowJs": true,
+     "outDir": "dist",
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
